# django-bootstrap-app

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
sandbox/: settings.py  urls.py
src/django_bootstrap_app/: urls.py  views.py
tests/functional/: test_boilerplate.py  test_views.py
