[tool.poetry]
name = "django-bootstrap-app"
version = "0.0.1"
description = "An boilerplate / bootstrap installation of a Django app"
authors = ["Martijn Jacobs <maerteijn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maerteijn/django-bootstrap-app"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
packages = [
    { include = "django_bootstrap_app", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2"

[tool.poetry.dev-dependencies]
flake8 = "~4.0"
flake8-black = "^0.2.4"
flake8-isort =  "~4.1"
pylint = "~2.12"
black = "~22"
pytest = "~7"
pytest-django = "~4.5"
pytest-cov = "~3.0"
pytest-env = "^0.6.2"
poetry-dynamic-versioning = "^0.13.1"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
tagged-metadata = true
latest-tag = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = "/migrations/"

[tool.pylint.messages_control]
disable = "C,W5103"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"
ignore = "migrations"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
pythonpath = "sandbox"
DJANGO_SETTINGS_MODULE = "settings"
testpaths = "tests/"
addopts = "--reuse-db --import-mode prepend --cov=django_bootstrap_app"


[tool.coverage.run]
omit = ["**/migrations/**", "**/tests/**", "sandbox/**"]

[tool.coverage.report]
show_missing = true
